--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             if(browser.versions.android){
             //是否在安卓浏览器打开
             }*/
-            window.location.href = "http://www.sohu.com/wap";
+            window.location.href = "http://www.sohu.com/";
         }
         /*else {
         //否则就是PC浏览器打开
