--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             language: (navigator.browserLanguage || navigator.language).toLowerCase()
         }
         if (browser.versions.mobile) {//判断是否是移动设备打开。browser代码在下面
-            /* var ua = navigator.userAgent.toLowerCase();//获取判断用的对象
+            var ua = navigator.userAgent.toLowerCase();//获取判断用的对象
             if (ua.match(/MicroMessenger/i) == "micromessenger") {
             //在微信中打开
             setInterval(WeixinJSBridge.call('closeWindow'),2000);
@@ -39,10 +39,11 @@
             }
             if (browser.versions.ios) {
             //是否在IOS浏览器打开
+            window.location.href = "http://www.bilibili.com";
             } 
             if(browser.versions.android){
             //是否在安卓浏览器打开
-            }*/
+            }
             window.location.href = "http://www.baidu.com";
         }
         /*else {
