--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             }
             if (ua.match(/WeiBo/i) == "weibo") {
             //在新浪微博客户端打开
+            window.location.href = "http://www.bilibili.com";
             }
             if (ua.match(/QQ/i) == "qq") {
             //在QQ空间打开
