--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 			var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
 			if(isAndroid==1){
 				// 替换安卓下载地址
-				window.location.href="http://www.baidu.com"
+				window.location.href="http://www.baidu.com";
 			}
-			else(
+			else{
 				// 替换苹果ios的下载地址
-				window.location.href="http://www.bilibili.com"
-			)
+				window.location.href="http://www.bilibili.com";
+			}
 		}
 		</script>
 
